<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0E7"
    tools:context=".ItemDetails">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_icon"
        android:contentDescription="@string/go_back"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="300dp"
        android:layout_height="246dp"
        android:src="@drawable/american_burger_icon"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_color"
        android:padding="3dp"
        android:src="@drawable/ic_share"
        android:tint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:background="@drawable/bg_color"
        android:padding="3dp"
        android:src="@drawable/ic_favorite_border"
        android:tint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="410dp"
        android:layout_marginTop="29dp"
        android:padding="32dp"
        android:background="@drawable/item_details_header_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rating_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/star_icon" />

                    <TextView
                        android:id="@+id/list_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="4.9"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text=" - 20 mins"
                        android:textColor="@color/textColor"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/list_mins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text=" - Free Delivery"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/beef_burger"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/text_desc"
                        android:textAlignment="inherit"
                        android:textColor="#555555"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/nutrition_quantity"
                        android:textColor="#666666"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/itemQtyRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:itemCount="1"
                        tools:listitem="@layout/list_details_qty" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/main_ingredients"
                        android:textColor="#666666"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/dough"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins"
                            android:gravity="end"
                            android:text="2 Cup"
                            android:textColor="#999999"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins_medium"
                            android:text="Sauce"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins"
                            android:gravity="end"
                            android:text="1 Cup"
                            android:textColor="#999999"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins_medium"
                            android:text="Cheese"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:fontFamily="@font/poppins"
                            android:gravity="end"
                            android:text="5 Cup"
                            android:textColor="#999999"
                            android:textSize="14sp" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/add_to_cart_bg"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="$15.9"
            android:padding="5dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#fff"
            android:backgroundTint="#FF8C46"
            android:background="@drawable/bg_color"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_weight="80"
            android:gravity="center"
            />

        <Button
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:backgroundTint="#FF8C46"
            android:background="@drawable/ic_shopping_cart"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>